# beer-temperature

./: LICENSE  README.md  pyproject.toml  temp.cfg  temp.py
beer_temperature/: adafruit_dht.py  main.py
tests/: test_beer_temperature.py
