[tool.poetry]
name = "beer-temperature"
version = "0.1.0"
description = ""
authors = ["Vladimir Takov <vladimir.takov@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
ConfigParser = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
